# QRoundedFrame

./: .gitignore  CHANGELOG.md  LINUX_WINDOW_TESTING.md  README-v2.md  README.md  requirements.txt  run.py
app/: cpp_ui_launcher.py  main.py  memory_snapshot.py  window_policy.py  windows_compat.py  windows_host.py
app/bridge/: app_bridge.py  tray_controller.py  window_controller.py
app/cpp/ui_runtime/: CMakeLists.txt  README.md  build_linux.sh  build_windows.bat  run_linux.sh  run_windows.bat
app/cpp/ui_runtime/resources/: windows_app.rc
app/cpp/ui_runtime/src/: card_glow_provider.cpp  card_glow_provider.h  main.cpp  runtime_app.cpp  runtime_app.h  task_store.cpp  task_store.h
app/prebuilt/: README.md
app/workers/: business_worker.py
qml/: MainWindow.qml  NativeAppMain.qml  NativeMainContent.qml
qml/controls/: AppButton.qml  AppCheckBox.qml  AppContextMenu.qml  AppDialog.qml  AppMenu.qml  AppSelect.qml  AppSlider.qml  AppTextField.qml  BackgroundRipple.qml  CardAccentGlow.qml  ColorPalettePopup.qml  ConfirmDialog.qml  ContextMenuItem.qml  DragScrollArea.qml  IconButton.qml  IconImage.qml  PanelShadow.qml  SecureTextField.qml  SoftShadow.qml  StorageBinding.qml  Toast.qml  TrayMenuWindow.qml
qml/core/: AppInfo.qml  InlineWindowBus.qml  Theme.qml  qmldir
qml/layout/: InlineWindowManager.qml  MainWindowContent.qml  PageHost.qml  ResizableSideNav.qml  SideNavButton.qml  SplitHandle.qml
qml/pages/: AboutPage.qml  HomePage.qml  InlineDemoPage.qml  SettingsPage.qml  TaskCreatePage.qml  TaskEditPage.qml  ToolsPage.qml  UpdatePage.qml
qml/window/: AppWindow.qml  ChildWindow.qml  (+13 more)
scripts/: README.md  check_native_window_integrity.py  check_text_encoding.py  linux_memory_breakdown.py  memory_baseline_probe.py  memory_child_probe.py  memory_child_reuse_probe.py  memory_interaction_probe.py  memory_multi_child_probe.py  memory_page_probe.py  package_app.py  probe_packaged_memory.py  smoke_window_exit.py  visual_window_probe.py
(+28 files in other folders)
